// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IsolateTest TestObject constructor 1`] = `
{
  "children": [],
  "fieldName": "unicycle",
  "key": null,
  "keys": {},
  "message": "I am Root.",
  "output": null,
  "parent": null,
  "severity": "error",
  "status": "UNTESTED",
  "testFn": [MockFunction],
  "type": "Test",
}
`;

exports[`IsolateTest testObject.warn Should mark the test as warning 1`] = `
{
  "children": [],
  "fieldName": "unicycle",
  "key": null,
  "keys": {},
  "message": "I am Root.",
  "output": null,
  "parent": null,
  "severity": "warning",
  "status": "UNTESTED",
  "testFn": [MockFunction],
  "type": "Test",
}
`;
